// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`code examples > pins the exact image examples 1`] = `
{
  "curl": "IMAGE_BASE64=$(base64 -i truck.jpg | tr -d '\\n')

curl https://sam.example.test/v1/responses \\
  -H "Authorization: Bearer $SAM_API_KEY" \\
  -H "Content-Type: application/json" \\
  -d @- <<EOF
{
  "model": "sam-3.1",
  "stream": false,
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "duck"
        },
        {
          "type": "input_image",
          "image_url": "data:image/jpeg;base64,$IMAGE_BASE64"
        }
      ]
    }
  ]
}
EOF",
  "typescript": "import { readFile } from 'node:fs/promises';
import { formats, parseResponsesStream, type ResponsesEvent } from '@meta-sam/parser';
import { SegmentationRenderer } from '@meta-sam/graphics';

const apiKey = process.env.SAM_API_KEY;
if (!apiKey) throw new Error('Set SAM_API_KEY.');

const imageBytes = await readFile("truck.jpg");
const imageUrl = "data:image/jpeg;base64," + imageBytes.toString('base64');

const response = await fetch('https://sam.example.test/v1/responses', {
  method: 'POST',
  headers: { Authorization: \`Bearer \${apiKey}\`, 'Content-Type': 'application/json' },
  body: JSON.stringify({
  "model": "sam-3.1",
  "stream": false,
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "duck"
        },
        {
          "type": "input_image",
          "image_url": imageUrl
        }
      ]
    }
  ]
}),
});
if (!response.ok) throw new Error(\`Responses API returned \${response.status}.\`);
const payload = (await response.json()) as {
  output?: Array<{ id?: string; content?: Array<{ type?: string; text?: string }> }>;
};
const item = payload.output?.find((entry) =>
  entry.content?.some((part) => part.type === 'output_text'),
);
const text = item?.content?.find((part) => part.type === 'output_text')?.text ?? '';

async function* events(): AsyncIterable<ResponsesEvent> {
  const lane = { item_id: item?.id ?? 'message-1', output_index: 0, content_index: 0 };
  yield { type: 'response.output_text.delta', ...lane, delta: text };
  yield { type: 'response.output_text.done', ...lane, text };
  yield { type: 'response.completed' };
}

const parsed = parseResponsesStream(events(), formats.segmentation.image());
const renderer = new SegmentationRenderer();
for await (const snapshot of parsed) {
  await renderer.update(snapshot);
}
const result = await parsed.finalResult;
await renderer.update(result);",
}
`;

exports[`code examples > pins the exact video examples with a known handle 1`] = `
{
  "curl": "curl https://sam.example.test/v1/files \\
  -H "Authorization: Bearer $SAM_API_KEY" \\
  -F purpose=user_data \\
  -F file=@bedroom.mp4

curl -N https://sam.example.test/v1/responses \\
  -H "Authorization: Bearer $SAM_API_KEY" \\
  -H "Content-Type: application/json" \\
  -d @- <<'EOF'
{
  "model": "zeta-model",
  "stream": true,
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "pillow"
        },
        {
          "type": "input_video",
          "file_id": "file-safe_123"
        }
      ]
    }
  ]
}
EOF",
  "typescript": "import { formats, parseResponsesStream, type ResponsesEvent } from '@meta-sam/parser';
import { SegmentationRenderer } from '@meta-sam/graphics';

const apiKey = process.env.SAM_API_KEY;
if (!apiKey) throw new Error('Set SAM_API_KEY.');

const fileId = 'file-safe_123';

const response = await fetch('https://sam.example.test/v1/responses', {
  method: 'POST',
  headers: { Authorization: \`Bearer \${apiKey}\`, 'Content-Type': 'application/json' },
  body: JSON.stringify({
  "model": "zeta-model",
  "stream": true,
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "pillow"
        },
        {
          "type": "input_video",
          "file_id": fileId
        }
      ]
    }
  ]
}),
});
if (!response.ok || response.body === null) {
  throw new Error(\`Responses API returned \${response.status}.\`);
}

function eventFromBlock(block: string): ResponsesEvent | null {
  const data = block
    .split('\\n')
    .filter((line) => line.startsWith('data:'))
    .map((line) => line.slice(5).trimStart())
    .join('\\n');
  return data && data !== '[DONE]' ? (JSON.parse(data) as ResponsesEvent) : null;
}

async function* events(): AsyncIterable<ResponsesEvent> {
  const reader = response.body!.pipeThrough(new TextDecoderStream()).getReader();
  let buffer = '';
  let pendingCarriageReturn = false;
  for (;;) {
    const { value = '', done } = await reader.read();
    let chunk = pendingCarriageReturn ? '\\r' + value : value;
    pendingCarriageReturn = false;
    if (!done && chunk.endsWith('\\r')) {
      chunk = chunk.slice(0, -1);
      pendingCarriageReturn = true;
    }
    buffer += chunk.replace(/\\r\\n|\\r/g, '\\n');
    for (
      let boundary = buffer.indexOf('\\n\\n');
      boundary >= 0;
      boundary = buffer.indexOf('\\n\\n')
    ) {
      const event = eventFromBlock(buffer.slice(0, boundary));
      buffer = buffer.slice(boundary + 2);
      if (event !== null) yield event;
    }
    if (done) break;
  }
  const finalEvent = eventFromBlock(buffer);
  if (finalEvent !== null) yield finalEvent;
}

const parsed = parseResponsesStream(events(), formats.segmentation.video());
const renderer = new SegmentationRenderer();
for await (const snapshot of parsed) {
  await renderer.update(snapshot);
}
const result = await parsed.finalResult;
await renderer.update(result);",
}
`;

exports[`code examples > pins the exact video examples with a placeholder handle 1`] = `
{
  "curl": "curl https://sam.example.test/v1/files \\
  -H "Authorization: Bearer $SAM_API_KEY" \\
  -F purpose=user_data \\
  -F file=@bedroom.mp4

curl -N https://sam.example.test/v1/responses \\
  -H "Authorization: Bearer $SAM_API_KEY" \\
  -H "Content-Type: application/json" \\
  -d @- <<'EOF'
{
  "model": "zeta-model",
  "stream": true,
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "pillow"
        },
        {
          "type": "input_video",
          "file_id": "<file-id from step 1>"
        }
      ]
    }
  ]
}
EOF",
  "typescript": "import { readFile } from 'node:fs/promises';
import { formats, parseResponsesStream, type ResponsesEvent } from '@meta-sam/parser';
import { SegmentationRenderer } from '@meta-sam/graphics';

const apiKey = process.env.SAM_API_KEY;
if (!apiKey) throw new Error('Set SAM_API_KEY.');

const videoBytes = await readFile("bedroom.mp4");
const upload = new FormData();
upload.append('purpose', 'user_data');
upload.append(
  'file',
  new Blob([new Uint8Array(videoBytes)], { type: "video/mp4" }),
  "bedroom.mp4",
);
const uploadResponse = await fetch('https://sam.example.test/v1/files', {
  method: 'POST',
  headers: { Authorization: \`Bearer \${apiKey}\` },
  body: upload,
});
if (!uploadResponse.ok) throw new Error(\`Files API returned \${uploadResponse.status}.\`);
const { id: fileId } = (await uploadResponse.json()) as { id: string };

const response = await fetch('https://sam.example.test/v1/responses', {
  method: 'POST',
  headers: { Authorization: \`Bearer \${apiKey}\`, 'Content-Type': 'application/json' },
  body: JSON.stringify({
  "model": "zeta-model",
  "stream": true,
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "pillow"
        },
        {
          "type": "input_video",
          "file_id": fileId
        }
      ]
    }
  ]
}),
});
if (!response.ok || response.body === null) {
  throw new Error(\`Responses API returned \${response.status}.\`);
}

function eventFromBlock(block: string): ResponsesEvent | null {
  const data = block
    .split('\\n')
    .filter((line) => line.startsWith('data:'))
    .map((line) => line.slice(5).trimStart())
    .join('\\n');
  return data && data !== '[DONE]' ? (JSON.parse(data) as ResponsesEvent) : null;
}

async function* events(): AsyncIterable<ResponsesEvent> {
  const reader = response.body!.pipeThrough(new TextDecoderStream()).getReader();
  let buffer = '';
  let pendingCarriageReturn = false;
  for (;;) {
    const { value = '', done } = await reader.read();
    let chunk = pendingCarriageReturn ? '\\r' + value : value;
    pendingCarriageReturn = false;
    if (!done && chunk.endsWith('\\r')) {
      chunk = chunk.slice(0, -1);
      pendingCarriageReturn = true;
    }
    buffer += chunk.replace(/\\r\\n|\\r/g, '\\n');
    for (
      let boundary = buffer.indexOf('\\n\\n');
      boundary >= 0;
      boundary = buffer.indexOf('\\n\\n')
    ) {
      const event = eventFromBlock(buffer.slice(0, boundary));
      buffer = buffer.slice(boundary + 2);
      if (event !== null) yield event;
    }
    if (done) break;
  }
  const finalEvent = eventFromBlock(buffer);
  if (finalEvent !== null) yield finalEvent;
}

const parsed = parseResponsesStream(events(), formats.segmentation.video());
const renderer = new SegmentationRenderer();
for await (const snapshot of parsed) {
  await renderer.update(snapshot);
}
const result = await parsed.finalResult;
await renderer.update(result);",
}
`;
